Sun Jun 12 17:03:21 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): Now the VM struct has its status.
	  Much like the status of thread.  This is (or will be) used to
	  manage VMs.

	* intervm.c: ditto.

	* eval.c: ditto.

	* vm.c: ditto.

	* vm_core.h: ditto.

	* vm_method.c: ditto.

Sat Jun 11 17:52:00 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (ruby_vm_destruct): this function might be called
	  inside of a st_foreach call so the st_delete shall be taken care
	  of.

Mon Feb 14 03:34:02 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (join_internal): New function.  RubyVM#join blocks so
	  it shall not hold GVL while it waits other VM.

Thu Feb 10 19:17:27 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ruby.c (proc_options): Instead of strdup (which causes memory
	  leak), let GC terminate those strings.

	* ruby.c (process_options): ditto.

	* ruby.c (moreswitches): ditto.

Thu Feb 10 18:05:55 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (InitVM_Thread): InitVM_native_thread() shall be called
	  for ALL threads, including the main thread.  All other threads
	  except the main one calls this function via rb_thread_create but
	  the main thread is not invoked that way so the call of this
	  function is needed somewhere.  I'm not sure this is the right
	  position to do so because there might perhaps be a chance for a
	  sugnal pump to touch uninitiaized native thread before this, but
	  I'm totally uncertain.

Thu Feb 10 16:53:14 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_stop): Should not destruct a VM this case.
	  ruby_stop() is called inside of rb_f_fork()'s child process
	  side.  That case, all native threads except the current one has
	  already been shut down (on POSIX at least).  The problem is,
	  those shut down threads might have holded locks, i.e. there can
	  be locked mutexes and they are not modifiabe.  Destructing a VM